// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTheme atlassian theme should match theme object for "create" 1`] = `
{
  "active": {
    "backgroundColor": "var(--ds-background-brand-bold-pressed)",
    "boxShadow": "",
    "color": "var(--ds-text-inverse)",
  },
  "default": {
    "backgroundColor": "var(--ds-background-brand-bold)",
    "boxShadow": "",
    "color": "var(--ds-text-inverse)",
  },
  "focus": {
    "backgroundColor": "",
    "boxShadow": "",
    "color": "var(--ds-text-inverse)",
  },
  "hover": {
    "backgroundColor": "var(--ds-background-brand-bold-hovered)",
    "boxShadow": "",
    "color": "var(--ds-text-inverse)",
  },
  "selected": {
    "backgroundColor": "",
    "boxShadow": "",
    "color": "",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "iconButton" 1`] = `
{
  "active": {
    "backgroundColor": "var(--ds-background-neutral-subtle-pressed)",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "default": {
    "backgroundColor": "transparent",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "focus": {
    "backgroundColor": "",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "hover": {
    "backgroundColor": "var(--ds-background-neutral-subtle-hovered)",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "selected": {
    "backgroundColor": "var(--ds-background-selected)",
    "boxShadow": "",
    "color": "var(--ds-text-selected)",
  },
  "selectedHover": {
    "backgroundColor": "var(--ds-background-selected-hovered)",
    "boxShadow": "",
    "color": "var(--ds-text-selected)",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "navigation" 1`] = `
{
  "backgroundColor": "var(--ds-surface)",
  "color": "var(--ds-text-subtlest)",
}
`;

exports[`generateTheme atlassian theme should match theme object for "primaryButton" 1`] = `
{
  "active": {
    "backgroundColor": "var(--ds-background-neutral-subtle-pressed)",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "default": {
    "backgroundColor": "transparent",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "focus": {
    "backgroundColor": "",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "hover": {
    "backgroundColor": "var(--ds-background-neutral-subtle-hovered)",
    "boxShadow": "",
    "color": "var(--ds-text-subtle)",
  },
  "selected": {
    "backgroundColor": "var(--ds-background-selected)",
    "borderColor": "var(--ds-border-selected)",
    "boxShadow": "",
    "color": "var(--ds-text-selected)",
  },
  "selectedHover": {
    "backgroundColor": "var(--ds-background-selected-hovered)",
    "borderColor": "var(--ds-border-selected)",
    "boxShadow": "",
    "color": "var(--ds-text-selected)",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "productHome" 1`] = `
{
  "backgroundColor": "var(--ds-text-brand)",
  "borderRight": "var(--ds-border-width) solid var(--ds-border)",
  "color": "var(--ds-text)",
  "iconColor": undefined,
  "textColor": undefined,
}
`;

exports[`generateTheme atlassian theme should match theme object for "search" 1`] = `
{
  "default": {
    "backgroundColor": "var(--ds-background-input)",
    "borderColor": "var(--ds-border-input)",
    "color": "var(--ds-text-subtlest)",
  },
  "focus": {
    "borderColor": "var(--ds-border-focused)",
  },
  "hover": {
    "backgroundColor": "var(--ds-background-input-hovered)",
  },
}
`;

exports[`generateTheme atlassian theme should match theme object for "skeleton" 1`] = `
{
  "backgroundColor": "var(--ds-background-neutral)",
  "opacity": 1,
}
`;

exports[`generateTheme custom black text theme should match theme object for "create" 1`] = `
{
  "active": {
    "backgroundColor": "rgba(233, 78, 52, 0.65)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": {
    "backgroundColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": {
    "backgroundColor": "#E94E34",
    "boxShadow": "none",
    "color": "#ffffff",
  },
  "hover": {
    "backgroundColor": "rgba(233, 78, 52, 0.8)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": {
    "backgroundColor": "rgba(159, 113, 105, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": {
    "backgroundColor": "rgba(159, 113, 105, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "iconButton" 1`] = `
{
  "active": {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": {
    "backgroundColor": "#272727",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": {
    "backgroundColor": "#272727",
    "boxShadow": "none",
    "color": "#ffffff",
  },
  "hover": {
    "backgroundColor": "rgba(119, 119, 119, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "navigation" 1`] = `
{
  "backgroundColor": "#272727",
  "color": "#ffffff",
}
`;

exports[`generateTheme custom black text theme should match theme object for "primaryButton" 1`] = `
{
  "active": {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": {
    "backgroundColor": "#272727",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": {
    "backgroundColor": "#272727",
    "boxShadow": "none",
    "color": "#ffffff",
  },
  "hover": {
    "backgroundColor": "rgba(119, 119, 119, 0.6)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": {
    "backgroundColor": "rgba(101, 101, 101, 0.6)",
    "borderColor": "#E94E34",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "productHome" 1`] = `
{
  "backgroundColor": "#E94E34",
  "borderRight": "var(--ds-border-width) solid rgba(255, 255, 255, 0.5)",
  "color": "#ffffff",
  "iconColor": "#ffffff",
  "textColor": "#ffffff",
}
`;

exports[`generateTheme custom black text theme should match theme object for "search" 1`] = `
{
  "default": {
    "backgroundColor": "#272727",
    "borderColor": "rgba(255, 255, 255, 0.5)",
    "color": "#ffffff",
  },
  "focus": {
    "borderColor": "rgba(233, 78, 52, 0.8)",
    "boxShadow": "0 0 0 2px rgba(233, 78, 52, 0.5)",
  },
  "hover": {
    "backgroundColor": "rgba(119, 119, 119, 0.6)",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom black text theme should match theme object for "skeleton" 1`] = `
{
  "backgroundColor": "#ffffff",
  "opacity": 0.08,
}
`;

exports[`generateTheme custom white text theme should match theme object for "create" 1`] = `
{
  "active": {
    "backgroundColor": "rgba(51, 51, 51, 0.65)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "default": {
    "backgroundColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "focus": {
    "backgroundColor": "#333333",
    "boxShadow": "none",
    "color": "#ffffff",
  },
  "hover": {
    "backgroundColor": "rgba(51, 51, 51, 0.8)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selected": {
    "backgroundColor": "rgba(105, 105, 105, 0.6)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
  "selectedHover": {
    "backgroundColor": "rgba(105, 105, 105, 0.6)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#ffffff",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "iconButton" 1`] = `
{
  "active": {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "default": {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "focus": {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "none",
    "color": "#000000",
  },
  "hover": {
    "backgroundColor": "rgba(138, 135, 136, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selected": {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selectedHover": {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "navigation" 1`] = `
{
  "backgroundColor": "#E8CBD2",
  "color": "#000000",
}
`;

exports[`generateTheme custom white text theme should match theme object for "primaryButton" 1`] = `
{
  "active": {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "default": {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "focus": {
    "backgroundColor": "#E8CBD2",
    "boxShadow": "none",
    "color": "#000000",
  },
  "hover": {
    "backgroundColor": "rgba(138, 135, 136, 0.3)",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selected": {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
  "selectedHover": {
    "backgroundColor": "rgba(159, 150, 152, 0.3)",
    "borderColor": "#333333",
    "boxShadow": "0 0 0 2px transparent",
    "color": "#000000",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "productHome" 1`] = `
{
  "backgroundColor": "#333333",
  "borderRight": "var(--ds-border-width) solid rgba(0, 0, 0, 0.5)",
  "color": "#000000",
  "iconColor": "#000000",
  "textColor": "#000000",
}
`;

exports[`generateTheme custom white text theme should match theme object for "search" 1`] = `
{
  "default": {
    "backgroundColor": "#E8CBD2",
    "borderColor": "rgba(0, 0, 0, 0.5)",
    "color": "#000000",
  },
  "focus": {
    "borderColor": "rgba(51, 51, 51, 0.8)",
    "boxShadow": "0 0 0 2px rgba(51, 51, 51, 0.5)",
  },
  "hover": {
    "backgroundColor": "rgba(138, 135, 136, 0.3)",
    "color": "#000000",
  },
}
`;

exports[`generateTheme custom white text theme should match theme object for "skeleton" 1`] = `
{
  "backgroundColor": "#000000",
  "opacity": 0.08,
}
`;
